# openal-soft-winphone

./: CMakeLists.txt
Alc/: helpers.c
